@@ -24,6 +24,7 @@ Bug fixes:
 - PR#5738: first class module patterns not handled by ocamldep
 - PR#5747: 'unused open' warning not given when compiling with -annot
 - PR#5758: Compiler bug when matching on floats
+- PR#5763: ocamlbuild does not give correct flags when running menhir
 
 Internals:
 - Moved debugger/envaux.ml to typing/envaux.ml to publish env_of_only_summary
